Remove binary assets from frontend

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 __pycache__/
+bayes_optimization/ui/frontend/node_modules/
+bayes_optimization/ui/frontend/.next/
+bayes_optimization/ui/frontend/out/
