--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,23 +1,31 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+  pull_request:
 
 jobs:
-  build:
+  pylint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup micromamba (create env from environment.yml)
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
+          # Ensure the created env name is consistent with the file
+          create-args: >-
+            -n ZJU-OCCS
+          cache-environment: true
+          cache-downloads: true
+
+      - name: Install pylint in the environment
+        run: |
+          micromamba install -y -n ZJU-OCCS -c conda-forge pylint
+
+      - name: Run pylint
+        shell: bash -l {0}
+        run: |
+          micromamba run -n ZJU-OCCS pylint $(git ls-files '*.py')
