ZJU-OCCS optimization implemented (#33)
* create new branch(dev): remove old files.

* chores: unify coding format

* Delete .idea directory

* chores: update readme.md

* update LICENSE

* chores: minor revision about annotations.

* Create pylint.yml

* chores: revise pylint.yml

* chores: adopt better coding style.

* fix(objective.py, test_optimizer.py): use MSE as objective and GP-Hedge as acquisition function

* chores: update environment.yml and enforce minimal score for pylint.yml

* chores: update environment.yml

* chores: upload pyproject.toml

* chores: update .gitignore

* chores: update .gitignore

* enhancement(estimator): use custom estimator to substitute default GP estimator.

* feat(optimizer.py): implement adaptive arguments in BO

* feat(viz.py): add xi into visualization

* fix(test_optimizer.py): fix true volts

* fix(test_optimizer.py): fix true volts

---------

Co-authored-by: leaf-master <leaf_master@protonmail.ch>

--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,26 @@
 name: ZJU-OCCS
 channels:
-  - defaults
   - conda-forge
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
-  - https://repo.anaconda.com/pkgs/msys2
+channel_priority: strict
+
 dependencies:
   - python=3.10
-  - matplotlib
-  - notebook
-  - tqdm
+  - pip
+
+  # ---- Core scientific stack ----
+  - numpy
+  - scipy
   - scikit-learn
-  - fastapi
-  - uvicorn
-  - python-multipart
+  - scikit-optimize
+
+  # ---- Plotting without Qt ----
+  - matplotlib-base
+
+  # ---- Dev / CI tools ----
+  - pylint
   - pytest
 
+
+  # ---- Install your package in editable mode so "import OCCS" works in CI ----
+  - pip:
+      - -e .
