doc: update readme and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,51 @@
+# --- Python ---
 __pycache__/
-**/.idea/
-**/dist/
+*.py[cod]
+*.pyo
+*.so
+.venv/
+venv/
+env/
+.env
+.env.*
 *.egg-info/
-**/node_modules/
+.eggs/
+build/
+dist/
+.mypy_cache/
+.pytest_cache/
+.tox/
+.nox/
+.coverage*
+htmlcov/
+.ruff_cache/
+.pylint.d/
 
-*.csv
-*.png
+# --- Node / Vite (web UI) ---
+**/node_modules/
+**/dist/
+**/.vite/
+**/.cache/
+**/.parcel-cache/
+**/.tsbuildinfo
+**/coverage/
+
+# --- Logs ---
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# --- OS / Editors ---
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+
+# --- Project outputs ---
+# Generated optimization artifacts (plots & CSVs)
+OCCS/data/optimization/**
+
+# --- Archives ---
 *.tar.gz
+*.zip
