--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,25 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "OCCS"
-version = "0.0.1"
-description = "Optical/Control/Curve Search utilities"
+version = "0.1.0"
+description = "Optical Chip Control & Search (core + FastAPI service + Web UI)"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "numpy>=1.24",
+    "scipy>=1.10",
+    "scikit-learn>=1.2",
+    "scikit-optimize>=0.9.0",
+]
+
+[project.optional-dependencies]
+web = [
+    "fastapi>=0.110",
+    "uvicorn>=0.23",
+]
+viz = [
+    "matplotlib>=3.7",
+]
 
 [project.scripts]
 occs-web = "OCCS.cli:web_main"
@@ -17,3 +31,13 @@ occs-web = "OCCS.cli:web_main"
 where = ["."]
 include = ["OCCS*"]
 exclude = ["tests*", "docs*"]
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+# Include built web UI assets and example data in the wheel
+OCCS = [
+    "webui/dist/**",
+    "data/*.csv",
+]
